<resources>
    <string name="app_name">LearnJetpack</string>
    <string name="welcome">Welcome %s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
</resources>